django-web/cloud-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: django-front
  namespace: django-cloud
spec:
  selector:
    matchLabels:
      app: django-front
  template:
    metadata:
      labels:
        app: django-front
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.6
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html/django
          name: web-volume
        - mountPath: /etc/nginx/conf.d/
          name: conf
      volumes:
      - name: web-volume
        hostPath:
          path: /django/django
          type: Directory
      - name: conf
        configMap:
          name: conf
