django-web/cloud-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: django
  namespace: django-cloud
spec:
    selector:
      app: django-front
    ports:
      - name: http
        protocol: TCP
        port: 80
        targetPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: django-back
  namespace: django-cloud
spec:
    sessionAffinity: ClientIP
    selector:
      app: django-back
    ports:
      - name: backend
        protocol: TCP
        port: 8000
        targetPort: 8000
